kubernetes-vault/deployment_alpine.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: alpine
  name: alpine
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alpine
  template:
    metadata:
      labels:
        app: alpine
    spec:
      containers:
      - name: alpine
        image: nginx:1.25.2-alpine
        ports:
          - containerPort: 80
      serviceAccountName: vault-auth
